--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=overlays-content">
     <title>Linux in Virtual Machine</title>
     <link rel="stylesheet" href="https://unpkg.com/dracula-ui@1.0.3/styles/dracula-ui.css" />
     <style>
         #term {
-            height: calc(100vh - 64px);
+            height: 100svh;
+            max-height: calc(100svh - 64px);
         }
     </style>
-
 </head>
 
 <body class="drac-bg-black">
@@ -19,16 +19,36 @@
         <h1 class="drac-heading drac-heading-xl drac-text-purple ">
             Linux-VM
         </h1>
-        <iframe 
-            id="term" 
-            src="https://linuxvm.dannluciano.com.br:7681/" 
-            frameborder="1px" 
-            width="100%"
-            class="drac-border-green"
-        >
+        <button id="control-c" onclick="controlC()">CTRL+C</button>
+        <button id="control-l" onclick="controlL()">CLEAR</button>
+        <iframe id="term" src="/ttyd" frameborder="1px" width="100%" class="drac-border-green">
         </iframe>
     </main>
-
+    <script>
+        function controlC() {
+            var input = document.getElementById('term').contentDocument.querySelector("textarea")
+            var keyboard = Keysim.Keyboard.US_ENGLISH;
+            let ctrl_c = new Keysim.Keystroke(
+                Keysim.Keystroke.CTRL,
+                67
+            );
+            keyboard.dispatchEventsForKeystroke(ctrl_c, input);
+            console.log('CTRL+C')
+        }
+        function controlL() {
+            var input = document.getElementById('term').contentDocument.querySelector("textarea")
+            var keyboard = Keysim.Keyboard.US_ENGLISH;
+            let ctrl_l = new Keysim.Keystroke(
+                Keysim.Keystroke.CTRL,
+                76
+            );
+            keyboard.dispatchEventsForKeystroke(ctrl_l, input);
+            console.log('CTRL+L')
+        }
+        var script = document.createElement('script');
+        script.src = 'https://unpkg.com/keysim@latest/dist/keysim.js';
+        document.body.appendChild(script);
+    </script>
 </body>
 
 </html>
