--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Linux in Virtual Machine</title>
     <link rel="stylesheet" href="https://unpkg.com/dracula-ui@1.0.3/styles/dracula-ui.css" />
     <style>
+
+        main {
+            height: 100vh;
+        }
+
         #term {
-            height: 100svh;
-            max-height: calc(100svh - 64px);
+            min-height: 50svh;
+            height: 100%;
+            max-height: calc(100svh - 96px);
         }
 
         .button {
